src/bindings.rs

unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Reads a CAN message from the receive queue of a CAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a CAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A CANTPMsg structure buffer to store the CAN message\"</param>"]
    #[doc = " <param name=\"TimestampBuffer\">\"A CANTPTimestamp structure buffer to get"]
    #[doc = " the reception time of the message. If this value is not desired, this parameter"]
    #[doc = " should be passed as NULL\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_Read(
        Channel: WORD,
        MessageBuffer: *mut CANTPMsg,
        TimestampBuffer: *mut CANTPTimestamp,
    ) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Reads a CAN message from the receive queue of a FD capable CAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a FD capable CAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A CANTPMsgFD structure buffer to store the CAN message\"</param>"]
    #[doc = " <param name=\"TimestampBuffer\">\"A CANTPTimestampFD buffer to get"]
    #[doc = " the reception time of the message. If this value is not desired, this parameter"]
    #[doc = " should be passed as NULL\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_ReadFD(
        Channel: WORD,
        MessageBuffer: *mut CANTPMsgFD,
        TimestampBuffer: *mut UINT64,
    ) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Transmits a CAN message"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a CAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A CANTPMsg buffer with the message to be sent\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_Write(Channel: WORD, MessageBuffer: *mut CANTPMsg) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Transmits a CAN message over a FD capable CAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a FD capable CAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A CANTPMsgFD buffer with the message to be sent\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_WriteFD(Channel: WORD, MessageBuffer: *mut CANTPMsgFD) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Configures the reception filter."]
    #[doc = " </summary>"]
    #[doc = " <remarks>The message filter will be expanded with every call to"]
    #[doc = " this function. If it is desired to reset the filter, please use"]
    #[doc = " the CAN_SetValue function</remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a CAN Channel\"</param>"]
    #[doc = " <param name=\"FromID\">\"The lowest CAN ID to be received\"</param>"]
    #[doc = " <param name=\"ToID\">\"The highest CAN ID to be received\"</param>"]
    #[doc = " <param name=\"Mode\">\"Message type, Standard (11-bit identifier) or"]
    #[doc = " Extended (29-bit identifier)\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_FilterMessages(Channel: WORD, FromID: DWORD, ToID: DWORD, Mode: BYTE) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Retrieves a CAN Channel value"]
    #[doc = " </summary>"]
    #[doc = " <remarks>Parameters can be present or not according with the kind"]
    #[doc = " of Hardware (CAN Channel) being used. If a parameter is not available,"]
    #[doc = " a PEAK_ERROR_ILLPARAMTYPE error will be returned</remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a CAN Channel\"</param>"]
    #[doc = " <param name=\"Parameter\">\"The CANTPParameter parameter to get\"</param>"]
    #[doc = " <param name=\"Buffer\">\"Buffer for the parameter value\"</param>"]
    #[doc = " <param name=\"BufferLength\">\"Size in bytes of the buffer\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_GetValue(
        Channel: WORD,
        Parameter: BYTE,
        Buffer: *mut ::std::os::raw::c_void,
        BufferLength: DWORD,
    ) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Configures or sets a CAN Channel value"]
    #[doc = " </summary>"]
    #[doc = " <remarks>Parameters can be present or not according with the kind"]
    #[doc = " of Hardware (CAN Channel) being used. If a parameter is not available,"]
    #[doc = " a PEAK_ERROR_ILLPARAMTYPE error will be returned</remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a CAN Channel\"</param>"]
    #[doc = " <param name=\"Parameter\">\"The CANTPParameter parameter to set\"</param>"]
    #[doc = " <param name=\"Buffer\">\"Buffer with the value to be set\"</param>"]
    #[doc = " <param name=\"BufferLength\">\"Size in bytes of the buffer\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_SetValue(
        Channel: WORD,
        Parameter: BYTE,
        Buffer: *mut ::std::os::raw::c_void,
        BufferLength: DWORD,
    ) -> DWORD;
}
unsafe extern "C" {
    #[doc = " <summary>"]
    #[doc = " Returns a descriptive text of a given CANTPStatus error"]
    #[doc = " code, in any desired language"]
    #[doc = " </summary>"]
    #[doc = " <remarks>The current languages available for translation are:"]
    #[doc = " Neutral (0x00), German (0x07), English (0x09), Spanish (0x0A),"]
    #[doc = " Italian (0x10) and French (0x0C)</remarks>"]
    #[doc = " <param name=\"Error\">\"A CANTPStatus error code\"</param>"]
    #[doc = " <param name=\"Language\">\"Indicates a 'Primary language ID'\"</param>"]
    #[doc = " <param name=\"Buffer\">\"Buffer for a null terminated char array\"</param>"]
    #[doc = " <returns>\"A CANTPStatus error code\"</returns>"]
    pub fn CAN_GetErrorText(Error: DWORD, Language: WORD, Buffer: LPSTR) -> DWORD;
}
